sidebar and main fixes

--- a/index.html
+++ b/index.html
@@ -7,45 +7,72 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Portfólió</title>
 </head>
-<body>
-    <aside>
-        <header>
+<body class="container">
+    <main class="base-main flex justify-center">
+        <aside class="main-sidebar text-center">
+            <header class="sidebar-header p-5">
+                <picture>
+                    <img class="rounded-full" src="https://placekitten.com/150/150" alt="avatar">
+                </picture>
+                <h4 class="h4-elem">Adrienn Rost</h4>
+                <small>Junior Frontend-developer | <a class="uppercase" href="#" target="_blank">Github</a></small>
+            </header>
+            <nav class="uppercase">
+                <ul class="list-unstyled p-0">
+                    <li><a href="#">Főoldal</a></li>
+                    <li><a href="#">Rólam</a></li>
+                    <li><a href="#">Szolgáltatásaim</a></li>
+                    <li><a href="#">Készségeim</a></li>
+                    <li><a href="#">Tanulmányok</a></li>
+                    <li><a href="#">Munkatapasztalat</a></li>
+                    <li><a href="#">Referenciák</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Kapcsolat</a></li>
+                </ul>
+            </nav>
+            <div class="about-me-skills col-md-8 col-sm-7">
+                <h4>Ismeretek*</h4>
+            <footer>
+                <p>© Copyright ©2021 All rights reserved | Adri</p>
+            </footer>
+        </aside>
+        <section class="main px-3 flex items-center flex-col">
+            <div class="main-hero flex items-center mb-5">
+                <article>
+                    <h1>I am
+                        a Developer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat orci nulla pellentesque dignissim enim.</p>
+                    <a class="main-btn" href=""></a>
+                </article>
+                <picture>
+                    <img src="https://placekitten.com/400/400" alt="">
+                </picture>
+            </div>
+            <div class="main-hero flex items-center mb-5">
+                <article>
+                    <h1>I am
+                        a Developer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat orci nulla pellentesque dignissim enim.</p>
+                    <a class="main-btn" href=""></a>
+                </article>
+                <picture>
+                    <img src="https://placekitten.com/400/400" alt="">
+                </picture>
+            </div>
 
-        </header>
-        <nav>
-            <ul>
-                
-                <li><a href="#">Főoldal</a></li>
-                <li><a href="#">Rólam</a></li>
-                <li><a href="#">Szolgáltatásaim</a></li>
-                <li><a href="#">Készségeim</a></li>
-                <li><a href="#">Tanulmányok</a></li>
-                <li><a href="#">Munkatapasztalat</a></li>
-                <li><a href="#">Referenciák</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Kapcsolat</a></li>
-            </ul>
-        </nav>
-        <div class="about-me-skills col-md-8 col-sm-7">
-            <h4>Ismeretek*</h4>
 
-        <footer>
-            <p>© Copyright ©2021 All rights reserved | Adri</p>
-        </footer>
-    </aside>
-    <main>
-        <section class="main-hero">
-            <article>
-                <h1></h1>
-                <p></p>
-                <a class="main-btn" href=""></a>
-            </article>
-            <picture>
-                <img src="" alt="">
-            </picture>
+
+
+
+
+
+
+
+
+
+            <div></div>
+            <footer></footer>
         </section>
-        <section></section>
-        <footer></footer>
     </main>
 </body>
 </html>
