sidebar and main fixes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Portfólió</title>
 </head>
 <body class="container">
-    <main class="base-main flex justify-center">
+    <main class="base-main flex justify-end">
         <aside class="main-sidebar text-center">
-            <header class="sidebar-header p-5">
-                <picture>
+            <header class="sidebar-header mb-1">
+                <div class="mb-2">
                     <img class="rounded-full" src="https://placekitten.com/150/150" alt="avatar">
-                </picture>
-                <h4 class="h4-elem">Adrienn Rost</h4>
-                <small>Junior Frontend-developer | <a class="uppercase" href="#" target="_blank">Github</a></small>
+                </div>
+                <h4 class="h4-elem mt-0 mb-1">Adrienn Rost</h4>
+                <small class="uppercase">Junior Frontend-developer | <a class="uppercase" href="#" target="_blank">Github</a></small>
             </header>
             <nav class="uppercase">
                 <ul class="list-unstyled p-0">
@@ -38,19 +38,17 @@
         </aside>
         <section class="main px-3 flex items-center flex-col">
             <div class="main-hero flex items-center mb-5">
-                <article>
-                    <h1>I am
+                <article class="main-hero-article">
+                    <h1 class="h1-elem">I am
                         a Developer</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat orci nulla pellentesque dignissim enim.</p>
                     <a class="main-btn" href=""></a>
                 </article>
-                <picture>
-                    <img src="https://placekitten.com/400/400" alt="">
-                </picture>
+              
             </div>
             <div class="main-hero flex items-center mb-5">
                 <article>
-                    <h1>I am
+                    <h1 class="h1-elem">I am
                         a Developer</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat orci nulla pellentesque dignissim enim.</p>
                     <a class="main-btn" href=""></a>
